crates/fleet-cli/src/tui/ui/snapshots/fleet__tui__ui__tests__render_empty_app.snap
---
source: crates/fleet-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" 1 ●                                                     ctrl+t new  ctrl+w clos"
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│ no results yet — execute a query with F5                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"idle [editor]                                 F3: history | F4: saved | F1: help"
