crates/fleet-cli/src/tui/ui/snapshots/fleet__tui__ui__tests__render_with_help_popup.snap
---
source: crates/fleet-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" 1 ●                                                     ctrl+t new  ctrl+w clos"
"┌ Query Editor ────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│               ┌ Help ────────────────────────────────────────┐               │"
"│               │                                              │               │"
"│               │Global Keybindings                            │               │"
"│               │                                              │               │"
"│               │  F1              - toggle help               │               │"
"│               │  F2              - toggle schema browser     │               │"
"└───────────────│  F3              - toggle query history      │───────────────┘"
"┌ Results ──────│  F4              - toggle saved queries      │───────────────┐"
"│ no results yet│  F9              - toggle live tail mode     │               │"
"│               │  Ctrl+Q          - quit                      │               │"
"│               │  Ctrl+S          - save current query        │               │"
"│               │  Ctrl+T          - new tab                   │               │"
"│               │  Ctrl+W          - close tab (outside editor)│               │"
"│               │  Shift+Tab       - cycle tabs                │               │"
"│               │  Alt+1-9         - jump to tab N             │               │"
"│               └──────────────────────────────────────────────┘               │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"idle [editor]                                 F3: history | F4: saved | F1: help"
