crates/fleet-cli/src/tui/ui/snapshots/fleet__tui__ui__tests__render_with_query_text.snap
---
source: crates/fleet-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" S  1 ●                                                  ctrl+t new  ctrl+w clos"
" H ┌ Query Editor ─────────────────────────────────────────────────────────────┐"
" Q │ level:error                                                               │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   ┌ Results ──────────────────────────────────────────────────────────────────┐"
"   │ no results yet — execute a query with F5                                  │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   idle [editor]                      F5: execute | ctrl+s: save | ctrl+l: clear"
