crates/fleet-cli/src/tui/ui/snapshots/fleet__tui__ui__tests__render_with_results.snap
---
source: crates/fleet-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" S  1 ✓                                                  ctrl+t new  ctrl+w clos"
" H ┌ Query Editor ─────────────────────────────────────────────────────────────┐"
" Q │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   ┌ Results (5 rows, cols 1-3/3) ─────────────────────────────────────────────┐"
"   │ host     service  count                                                   │"
"   │ web-1    nginx    42                                                      │"
"   │ web-2    api      17                                                      │"
"   │ db-1     postgres 3                                                       │"
"   │ web-3    redis    99                                                      │"
"   │ lb-1     haproxy  7                                                       │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"   success (42ms) [editor]                    F3: history | F4: saved | F1: help"
