crates/fleet-cli/src/tui/ui/snapshots/fleet__tui__ui__tests__render_with_save_popup.snap
---
source: crates/fleet-cli/src/tui/ui/mod.rs
expression: terminal.backend().to_string()
---
" 1 ●                                                     ctrl+t new  ctrl+w clos"
" S ┌ Query Editor ─────────────────────────────────────────────────────────────┐"
" H │                                                                           │"
" Q │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │            ┌ Save Query ──────────────────────────────────┐               │"
"   │            │                                              │               │"
"   └────────────│                                              │───────────────┘"
"   ┌ Results ───│         Enter a name for this query:         │───────────────┐"
"   │ no results │                                              │               │"
"   │            │                  > my query█                 │               │"
"   │            │                                              │               │"
"   │            └──────────────────────────────────────────────┘               │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   │                                                                           │"
"   └───────────────────────────────────────────────────────────────────────────┘"
"idle [editor]                                 F3: history | F4: saved | F1: help"
